--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.9.1
 certifi==2025.8.3
 charset-normalizer==3.4.3
+cloudinary==1.44.1
 Django==5.2.5
 django-admin-thumbnails==0.2.9
+django-cloudinary-storage==0.3.0
 gunicorn==23.0.0
 idna==3.10
 packaging==25.0
