--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
 asgiref==3.9.1
 certifi==2025.8.3
 charset-normalizer==3.4.3
+cloudinary==1.44.1
 Django==5.2.5
 django-admin-thumbnails==0.2.9
+django-cloudinary-storage==0.3.0
 gunicorn==23.0.0
 idna==3.10
 packaging==25.0
 pillow==11.3.0
 psycopg==3.2.9
 psycopg-binary==3.2.9
+python-decouple==3.8
 requests==2.32.4
 six==1.17.0
 sqlparse==0.5.3
